# LRGame

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  main.cpp
src/players/: AIAvoider.cpp  AIAvoider.h  AIGuesser.cpp  AIGuesser.h  AIPlayer.cpp  AIPlayer.h  HumanPlayer.cpp  HumanPlayer.h  Player.hpp
